add @media to index.html

--- a/sass/components/_join.scss
+++ b/sass/components/_join.scss
@@ -1,13 +1,24 @@
 .join {
     margin-right: auto;
 
+    @media screen and (max-width: 1200px) {
+        margin-bottom: 60px;
+      }
+    
+
     &-title {
         display: block;
         margin-bottom: 20px;
         line-height: 1.14;
         text-transform: uppercase;
+        text-align: center;
         
         color: var(--main-bgc-text);
+
+        @media screen and (min-width: 1200px) {
+            text-align: left;
+          }
+
       }
   }
   
