--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -3,6 +3,11 @@
     padding-top: 200px;
     padding-bottom: 200px;
 
+    @media screen and (max-width: 768px) {
+      padding-top: 118px;
+      padding-bottom: 118px;
+    }
+
     background-color: var(--third-bgc-color);
 
     &.section {
@@ -10,7 +15,7 @@
       }
     
     &-title {
-        width: 696px;
+        max-width: 696px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
@@ -20,6 +25,12 @@
         line-height: 1.36;
         letter-spacing: 0.06em;
         text-transform: uppercase;
+
+        @media screen and (max-width: 768px) {
+        max-width: 360px;
+        font-size: 26px;
+        line-height: 1.62;
+        }
         
         color: var(--main-bgc-text);
     }
@@ -28,6 +39,12 @@
 .overlay {
     height: 600px;
     max-width: 1600px;
+
+    @media screen and (max-width: 768px) {
+      max-width: 768px;
+      height: 400px;
+    }
+
     margin-left: auto;
     margin-right: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
