--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,8 @@
   --logo-text-color: #000000;
   --bgcolor-btn: #188ce8;
   --border-logo-color: #afb1b8;
+  --indent: 30px;
+  --items: 4;
   --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -73,7 +75,7 @@ ul {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -95,16 +97,37 @@ img {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+}
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .nav {
@@ -321,35 +344,74 @@ img {
 .join {
   margin-right: auto;
 }
+@media screen and (max-width: 1200px) {
+  .join {
+    margin-bottom: 60px;
+  }
+}
 .join-title {
   display: block;
   margin-bottom: 20px;
   line-height: 1.14;
   text-transform: uppercase;
+  text-align: center;
   color: var(--main-bgc-text);
+}
+@media screen and (min-width: 1200px) {
+  .join-title {
+    text-align: left;
+  }
 }
 
 .sign-strong {
   display: block;
+  text-align: center;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--main-bgc-text);
 }
+@media screen and (min-width: 1200px) {
+  .sign-strong {
+    text-align: start;
+  }
+}
 
 .form-signup {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  gap: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .form-signup {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    gap: 12px;
+  }
 }
 
 .form-email {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  width: 358px;
+  max-width: 450px;
   height: 50px;
   padding-left: 16px;
   color: var(--contacts-text-color);
@@ -360,6 +422,11 @@ img {
   border-radius: 4px;
   -webkit-transition: border-color var(--main-transition);
   transition: border-color var(--main-transition);
+}
+@media screen and (min-width: 1200px) {
+  .form-email {
+    width: 358px;
+  }
 }
 .form-email:hover, .form-email:focus {
   outline: transparent;
@@ -433,11 +500,17 @@ img {
   padding-bottom: 200px;
   background-color: var(--third-bgc-color);
 }
+@media screen and (max-width: 768px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
 .hero.section {
   text-align: center;
 }
 .hero-title {
-  width: 696px;
+  max-width: 696px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -447,6 +520,13 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-bgc-text);
+}
+@media screen and (max-width: 768px) {
+  .hero-title {
+    max-width: 360px;
+    font-size: 26px;
+    line-height: 1.62;
+  }
 }
 
 .overlay {
@@ -459,6 +539,12 @@ img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+}
+@media screen and (max-width: 768px) {
+  .overlay {
+    max-width: 768px;
+    height: 400px;
+  }
 }
 
 .modal {
@@ -643,7 +729,22 @@ textarea::placeholder {
   color: var(--accent-color);
 }
 
+.benefits__item {
+  width: 450px;
+}
+@media screen and (min-width: 768px) {
+  .benefits__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    width: 270px;
+  }
+}
 .benefits .list-style {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -652,15 +753,24 @@ textarea::placeholder {
   gap: 30px;
 }
 .benefits__title {
-  width: 270px;
+  text-align: center;
   text-transform: uppercase;
   font-weight: 700;
   line-height: 1.14;
   font-size: 14px;
   color: var(--primary-text-color);
 }
+@media screen and (min-width: 768px) {
+  .benefits__title {
+    text-align: left;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .benefits__title {
+    text-align: left;
+  }
+}
 .benefits__text {
-  width: 270px;
   line-height: 1.71;
   color: var(--second-text-color);
 }
@@ -686,6 +796,14 @@ textarea::placeholder {
 
 .about {
   padding-top: 0px;
+}
+@media screen and (max-width: 1200px) {
+  .about {
+    display: none;
+  }
+}
+.about__title {
+  margin-bottom: 50px;
 }
 .about__list {
   gap: 30px;
@@ -720,20 +838,40 @@ textarea::placeholder {
   color: var(--main-bgc-text);
 }
 
-.title-margin {
-  margin-bottom: 50px;
-}
-
 .team {
   background-color: var(--second-bgc-color);
 }
+.team__title {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .team__title {
+    margin-bottom: 50px;
+  }
+}
 .team__list {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
 }
 .team__item {
+  width: 450px;
   border-radius: 0px 0px 4px 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team__item {
+    width: 270px;
+  }
 }
 .team__undercard {
   padding-top: 30px;
@@ -758,7 +896,20 @@ textarea::placeholder {
   margin-bottom: 10px;
 }
 
+.customers__title {
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1200px) {
+  .customers__title {
+    margin-bottom: 50px;
+  }
+}
 .customers__list {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
 }
 .customers__link {
@@ -771,13 +922,23 @@ textarea::placeholder {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: 1px solid var(--border-logo-color);
   border-radius: 4px;
   color: var(--border-logo-color);
   -webkit-transition: color var(--main-transition), border-color var(--main-transition);
   transition: color var(--main-transition), border-color var(--main-transition);
+}
+@media screen and (min-width: 768px) {
+  .customers__link {
+    width: 226px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers__link {
+    width: 170px;
+  }
 }
 .customers__link:hover, .customers__link:focus {
   color: var(--accent-color);
@@ -795,22 +956,57 @@ textarea::placeholder {
   background-color: var(--third-bgc-color);
 }
 .footer-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
 .footer-logo {
-  color: var(--accent-color);
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--accent-color);
+}
+@media screen and (min-width: 480px) {
+  .footer-logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .address-box {
-  margin-right: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .address-box {
+    margin-right: 70px;
+    margin-bottom: 0px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
 
 .address-all {
@@ -819,6 +1015,12 @@ textarea::placeholder {
 
 .address-style {
   list-style: none;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .address-style {
+    text-align: left;
+  }
 }
 
 .footer-logo-side,
@@ -828,6 +1030,11 @@ textarea::placeholder {
 
 .address-item:not(:last-child) {
   margin-bottom: 9px;
+}
+@media screen and (max-width: 480px) {
+  .address-item:not(:last-child) {
+    margin-bottom: 8px;
+  }
 }
 
 .address,
