--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -1,15 +1,40 @@
 
 .customers {
-    &__list {
-        gap: 30px;
+
+    &__title {
+      margin-bottom: 30px;
+
+      @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+      }
     }
+
+    &__list {
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+  }
+
+    // &__item {
+    //   Пока пустой
+  
+    // }
 
     &__link {
         display: flex;
         justify-content: center;
         align-items: center;
-      
-        width: 170px;
+              
+        width: 210px;
+
+        @media screen and (min-width: 768px) {
+          width: 226px;
+        }
+  
+        @media screen and (min-width: 1200px) {
+          width: 170px;
+        }
+
         height: 92px;
         border: 1px solid var(--border-logo-color);
         border-radius: 4px;
