--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,23 +1,55 @@
 .footer {
+        
     padding-top: 60px;
     padding-bottom: 60px;
 
     background-color: var(--third-bgc-color);
 
     &-box {
+      
+      flex-wrap: wrap;
+      justify-content: center;
+
+      @media screen and (min-width: 768px) {
+        
+      }
+
+      @media screen and (min-width: 1200px) {
         display: flex;
         align-items: baseline;
+      }
+
       }
   }
 
   .footer-logo {
-    color: var(--accent-color);
     font-family: 'Raleway', sans-serif;
-    font-size: 26px;
+    font-size: 24px;
+    line-height: 1.17;
+
+    color: var(--accent-color);
+
+
+    @media screen and (min-width: 480px) {
+      font-size: 26px;
+      line-height: 1.19;
+    }
+
   }
 
   .address-box {
-    margin-right: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+      margin-right: 70px;
+      margin-bottom: 0px;
+      align-items: flex-start;
+    }
+    
   }
 
   .address-all {
@@ -26,6 +58,12 @@
   
   .address-style {
     list-style: none;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
+
   }
   
   .footer-logo-side,
@@ -35,6 +73,10 @@
   
   .address-item:not(:last-child) {
     margin-bottom: 9px;
+
+    @media screen and (max-width: 480px) {
+      margin-bottom: 8px;
+    }
   }
   
   .address,
