final add @media

--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,7 +1,11 @@
 .contact {
-    padding: 32px 0;
+    padding: 5px 0;
 
     color: var(--second-text-color);
+
+    @media screen and (min-width: 1200px) {
+        padding: 32px 0;
+        }
 
     &:hover,
     &:focus {
