--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,6 @@
   --logo-text-color: #000000;
   --bgcolor-btn: #188ce8;
   --border-logo-color: #afb1b8;
-  --indent: 30px;
-  --items: 4;
   --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -130,16 +128,152 @@ img {
   }
 }
 
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0;
+  margin: 0;
+  z-index: 1000000;
+  background-color: transparent;
+  border: none;
+}
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+.menu-button .icon-cross {
+  display: none;
+}
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+.menu-button:hover .icon-menu, .menu-button:focus .icon-menu, .menu-button:hover .icon-cross, .menu-button:focus .icon-cross {
+  fill: var(--accent-color);
+}
+
+.menu-container {
+  position: absolute;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  opacity: 0;
+  background-color: var(--main-bgc-text);
+  -webkit-transition: -webkit-transform var(--main-transition);
+  transition: -webkit-transform var(--main-transition);
+  transition: transform var(--main-transition);
+  transition: transform var(--main-transition), -webkit-transform var(--main-transition);
+}
+.menu-container.is-open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
+}
+@media screen and (min-width: 768px) {
+  .menu-container.is-open {
+    display: none;
+  }
+}
+
+.mobile-nav {
+  margin-bottom: auto;
+}
+.mobile-nav-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-nav-link {
+  text-decoration: none;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+}
+
+.accent {
+  color: var(--accent-color);
+}
+
+.mobile-contacts {
+  margin-bottom: 64px;
+}
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.mobile-contacts-tel {
+  text-decoration: none;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+.mobile-contacts-mail {
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+}
+
+.mobile-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+}
+.mobile-socials-item:not(:last-child) .mobile-socials-link {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+.mobile-socials-link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
 .nav {
   margin-right: auto;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .nav {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
-.nav-list.list-style > li {
+.nav-list.list-style > li:not(:last-child) {
   margin-right: 50px;
-}
-
-.nav-list.list-style > li:last-child {
-  margin-right: 0;
 }
 
 .current {
@@ -161,8 +295,13 @@ img {
 }
 
 .contact {
-  padding: 32px 0;
+  padding: 5px 0;
   color: var(--second-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .contact {
+    padding: 32px 0;
+  }
 }
 .contact:hover, .contact:focus {
   color: var(--accent-color);
@@ -341,8 +480,16 @@ img {
   padding: 0;
 }
 
-.join {
-  margin-right: auto;
+@media screen and (min-width: 768px) {
+  .join {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .join {
+    margin-right: 93px;
+  }
 }
 @media screen and (max-width: 1200px) {
   .join {
@@ -360,6 +507,15 @@ img {
 @media screen and (min-width: 1200px) {
   .join-title {
     text-align: left;
+  }
+}
+
+.sign {
+  display: block;
+}
+@media screen and (min-width: 768px) {
+  .sign {
+    width: 450px;
   }
 }
 
@@ -407,11 +563,16 @@ img {
   }
 }
 
+.signup-label {
+  max-width: 450px;
+  text-align: center;
+}
+
 .form-email {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  max-width: 450px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   color: var(--contacts-text-color);
@@ -468,6 +629,7 @@ img {
 }
 
 .header {
+  position: relative;
   font-weight: 500;
   border-bottom: 1px solid var(--line-color);
 }
@@ -480,18 +642,73 @@ img {
           align-items: center;
 }
 .header-logo {
-  color: var(--accent-color);
+  padding: 16px 0px;
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
+  font-size: 24px;
+  line-height: 1.17;
+  color: var(--accent-color);
+}
+@media screen and (min-width: 768px) {
+  .header-logo {
+    padding: 26px 0px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-logo {
+    padding: 24px 0px;
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 .header-logo.line {
-  margin-right: 93px;
+  margin-right: auto;
+}
+@media screen and (min-width: 768px) {
+  .header-logo.line {
+    margin-right: 88px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-logo.line {
+    margin-right: 93px;
+  }
 }
 .header-logo-side {
   color: var(--logo-text-color);
 }
 .header-contact {
-  margin-right: 50px;
+  margin-right: 0;
+}
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    margin-right: 30px;
+  }
+}
+
+.list-contact {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .list-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .list-contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
 }
 
 .hero {
@@ -554,12 +771,18 @@ img {
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
   padding: 40px;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   border-radius: 4px;
   background-color: var(--main-bgc-text);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .send__title {
@@ -715,8 +938,8 @@ textarea::placeholder {
 
 .policy {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -724,6 +947,12 @@ textarea::placeholder {
           user-select: none;
   margin-left: 8px;
   color: var(--second-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .policy {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 .policy__link {
   color: var(--accent-color);
@@ -843,6 +1072,13 @@ textarea::placeholder {
 }
 .team__title {
   margin-bottom: 30px;
+  font-weight: 700;
+}
+@media screen and (max-width: 1199px) {
+  .team__title {
+    font-size: 28px;
+    line-height: 1.18;
+  }
 }
 @media screen and (min-width: 1200px) {
   .team__title {
@@ -898,6 +1134,12 @@ textarea::placeholder {
 
 .customers__title {
   margin-bottom: 30px;
+}
+@media screen and (max-width: 1199px) {
+  .customers__title {
+    font-size: 28px;
+    line-height: 1.18;
+  }
 }
 @media screen and (min-width: 1200px) {
   .customers__title {
@@ -962,7 +1204,7 @@ textarea::placeholder {
       -ms-flex-pack: center;
           justify-content: center;
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .footer-box {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -972,6 +1214,19 @@ textarea::placeholder {
             align-items: baseline;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
 
 .footer-logo {
   font-family: "Raleway", sans-serif;
@@ -979,7 +1234,7 @@ textarea::placeholder {
   line-height: 1.17;
   color: var(--accent-color);
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .footer-logo {
     font-size: 26px;
     line-height: 1.19;
@@ -999,8 +1254,14 @@ textarea::placeholder {
           align-items: center;
   margin-bottom: 60px;
 }
+@media screen and (min-width: 768px) {
+  .address-box {
+    margin-right: 165px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .address-box {
+    margin-left: 0;
     margin-right: 70px;
     margin-bottom: 0px;
     -webkit-box-align: start;
@@ -1062,12 +1323,37 @@ textarea::placeholder {
 
 .filter__btn {
   gap: 8px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .filter__btn {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter__btn {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 .filter__btn.list-style {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .filter__btn.list-style {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .filter__btn.list-style {
+    margin-bottom: 50px;
+  }
 }
 
 .exmp-button {
@@ -1097,15 +1383,30 @@ textarea::placeholder {
 }
 
 .card-work {
-  width: 370px;
-  margin-right: 30px;
+  width: 450px;
   margin-bottom: 30px;
 }
-.card-work:nth-child(3n) {
-  margin-right: 0;
-}
-.card-work:nth-last-child(-n+3) {
+.card-work:last-child {
   margin-bottom: 0;
+}
+@media screen and (min-width: 768px) {
+  .card-work {
+    width: 354px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .card-work {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+  .card-work:nth-child(3n) {
+    margin-right: 0;
+  }
+  .card-work:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 
 .card-thumb {
@@ -1126,6 +1427,11 @@ textarea::placeholder {
   transition: -webkit-transform var(--main-transition);
   transition: transform var(--main-transition);
   transition: transform var(--main-transition), -webkit-transform var(--main-transition);
+}
+@media screen and (min-width: 1200px) {
+  .card-overlay {
+    height: 294px;
+  }
 }
 
 .card-desc {
@@ -1163,8 +1469,19 @@ textarea::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .card.list-style {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    gap: 30px;
+  }
 }
 
 .border-exmp {
@@ -1176,6 +1493,7 @@ textarea::placeholder {
 
 .card-img {
   display: block;
+  height: 294px;
 }
 
 .title.exmp {
