--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,12 +1,23 @@
+
 .nav {
     margin-right: auto;
+
+    display: none;
+
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
     
   }
 
-  .nav-list.list-style > li {
+  .nav-list.list-style > li:not(:last-child) {
     margin-right: 50px;
   }
   
-  .nav-list.list-style > li:last-child {
-    margin-right: 0;
-  }
+  // .nav-list.list-style > li:last-child {
+  //   margin-right: 0;
+  // }
