--- a/sass/layouts/_card-set.scss
+++ b/sass/layouts/_card-set.scss
@@ -1,15 +1,39 @@
 .card-work {
-    width: 370px;
-    margin-right: 30px;
+    width: 450px;
     margin-bottom: 30px;
 
-    &:nth-child(3n) {
-        margin-right: 0;
-    }
-      
-    &:nth-last-child(-n + 3) {
+    &:last-child {
         margin-bottom: 0;
     }
+
+    // &:nth-child(3n) {
+    //     margin-right: 0;
+    // }
+      
+    // &:nth-last-child(-n + 3) {
+    //     margin-bottom: 0;
+    // }
+
+    @media screen and (min-width: 768px) {
+        width: 354px; 
+        margin-bottom: 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 370px;
+        margin-right: 30px;
+        margin-bottom: 30px;
+    
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
+          
+        &:nth-last-child(-n + 3) {
+            margin-bottom: 0;
+        }  
+    }
+
+
 }
   
 .card-thumb {
@@ -27,6 +51,11 @@
   
     transform: translateY(100%);
     transition: transform var(--main-transition);
+
+    @media screen and (min-width: 1200px) {
+    height: 294px; 
+    }
+
 }
    
 .card-desc {
@@ -65,7 +94,15 @@
 
 .card.list-style {
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px){
+    justify-content: flex-start;
+     gap: 30px;
+     
+    }
+
 }
   
 .border-exmp {
@@ -77,6 +114,7 @@
   
 .card-img {
     display: block;
+    height: 294px;
 }
   
 .title.exmp {
