--- a/sass/layouts/_customers.scss
+++ b/sass/layouts/_customers.scss
@@ -4,6 +4,11 @@
     &__title {
       margin-bottom: 30px;
 
+      @media screen and (max-width: 1199px) {
+        font-size: 28px;
+      line-height: 1.18;
+      }
+
       @media screen and (min-width: 1200px) {
         margin-bottom: 50px;
       }
