--- a/sass/layouts/_filter.scss
+++ b/sass/layouts/_filter.scss
@@ -1,10 +1,28 @@
 .filter__btn {
     gap: 8px;
+    flex-wrap: wrap;
+
+    @media screen and (min-width: 768px) {
     justify-content: center;
+    }
+    
+    @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    justify-content: center;
+    }
 
     &.list-style {
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 30px;
+        }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+        }
     }
+
     
 }
 
