--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -11,12 +11,15 @@
       justify-content: center;
 
       @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: baseline;
         
       }
 
       @media screen and (min-width: 1200px) {
         display: flex;
         align-items: baseline;
+        justify-content: flex-start;
       }
 
       }
@@ -30,7 +33,7 @@
     color: var(--accent-color);
 
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 1200px) {
       font-size: 26px;
       line-height: 1.19;
     }
@@ -44,7 +47,14 @@
 
     margin-bottom: 60px;
 
+    @media screen and (min-width: 768px) {
+      // margin-left: 76px;
+      margin-right: 165px;
+    }
+
+
     @media screen and (min-width: 1200px) {
+      margin-left: 0;
       margin-right: 70px;
       margin-bottom: 0px;
       align-items: flex-start;
