--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,22 +1,48 @@
 // Четвертый паршал
 
 .header {
+    position: relative;
     font-weight: 500;
     border-bottom: 1px solid var(--line-color);
 
     &-flex {
+      
         display: flex;
         align-items: center;
     }
 
     &-logo {
-    color: var(--accent-color);
+    padding: 16px 0px;
     font-family: 'Raleway', sans-serif;
-    font-size: 26px;
+    font-size: 24px;
+    line-height: 1.17;
+
+    color: var(--accent-color);
+    
+    @media screen and (min-width: 768px) {
+      padding: 26px 0px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      padding: 24px 0px;
+      font-size: 26px;
+      line-height: 1.19;
+    }
+
+
+
     }
 
     &-logo.line {
+      margin-right: auto;
+
+      @media screen and (min-width: 768px) {
+        margin-right: 88px;
+        }
+        
+        @media screen and (min-width: 1200px) {
         margin-right: 93px;
+        }
     }
       
     &-logo-side {
@@ -24,7 +50,28 @@
     }
 
     &-contact {
-        margin-right: 50px;
+        margin-right: 0;
+
+        @media screen and (min-width: 1200px) {
+          margin-right: 30px;
+        }
+
       }
 }
+
+.list-contact {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+      }
+
+      @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-direction: row;
+      }
+}
+
+
   
