--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -4,14 +4,19 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     padding: 40px;
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     border-radius: 4px;
 
     background-color: var(--main-bgc-text);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     
+
+    @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+    }
 }
 
 .send {
@@ -152,8 +157,8 @@ textarea {
   
 .policy {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     user-select: none;
   
@@ -161,8 +166,14 @@ textarea {
   
     color: var(--second-text-color);
 
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71; 
+    }
+
     &__link {
         color: var(--accent-color);
     }
+
 }
   
