--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 // components styles
 @import "./components/container";
 @import "./components/section";
+@import "./components/mobile-menu";
 @import "./components/nav";
 @import "./components/current";
 @import "./components/contact";
