--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -15,8 +15,8 @@
     --bgcolor-btn: #188ce8;
     --border-logo-color: #afb1b8;
 
-    --indent: 30px;
-    --items: 4;
+    // --indent: 30px;
+    // --items: 4;
   
     --main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
