--- a/css/main.css
+++ b/css/main.css
@@ -717,7 +717,7 @@ img {
   padding-bottom: 200px;
   background-color: var(--third-bgc-color);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1199px) {
   .hero {
     padding-top: 118px;
     padding-bottom: 118px;
@@ -738,7 +738,7 @@ img {
   text-transform: uppercase;
   color: var(--main-bgc-text);
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1199px) {
   .hero-title {
     max-width: 360px;
     font-size: 26px;
@@ -747,8 +747,8 @@ img {
 }
 
 .overlay {
-  height: 600px;
-  max-width: 1600px;
+  max-width: 480px;
+  height: 400px;
   margin-left: auto;
   margin-right: auto;
   background-size: cover;
@@ -757,10 +757,15 @@ img {
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero/hero_sm.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero_sm.jpg);
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .overlay {
     max-width: 768px;
-    height: 400px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .overlay {
+    max-width: 1600px;
+    height: 600px;
   }
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
