--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -3,7 +3,7 @@
     padding-top: 200px;
     padding-bottom: 200px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1199px) {
       padding-top: 118px;
       padding-bottom: 118px;
     }
@@ -26,7 +26,7 @@
         letter-spacing: 0.06em;
         text-transform: uppercase;
 
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 1199px) {
         max-width: 360px;
         font-size: 26px;
         line-height: 1.62;
@@ -37,12 +37,16 @@
 }
 
 .overlay {
-    height: 600px;
-    max-width: 1600px;
+    max-width: 480px;
+    height: 400px;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (min-width: 768px) {
       max-width: 768px;
-      height: 400px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      max-width: 1600px;
+      height: 600px;
     }
 
     margin-left: auto;
