--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,4 +1,6 @@
 .hero {
+    // position: relative;
+    // z-index: 5;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
