--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -4,18 +4,25 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     padding: 40px;
-    width: 450px;
-    height: 609px;
+    max-width: 450px;
+    max-height: 609px;
     border-radius: 4px;
-    z-index: 1000000;
+    z-index: 1000;
 
     background-color: var(--main-bgc-text);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     
+    @media screen and (min-width: 480px) {
+    width: 450px;
+    height: 609px;
+    }
+
     @media screen and (min-width: 1200px) {
     width: 528px;
     height: 581px;
+    max-width: 528px;
+    max-height: 581px;
     }
 }
 
